--- a/Clase_28/ProyectoFullStack23307/Back/package.json
+++ b/Clase_28/ProyectoFullStack23307/Back/package.json
@@ -1,7 +1,6 @@
 {
   "name": "proyectofullstack23307",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -15,5 +14,7 @@
     "express": "^4.18.2",
     "mysql2": "^3.3.5",
     "sequelize": "^6.32.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
